[gd_scene load_steps=3 format=3 uid="uid://dl33iea172ios"]

[ext_resource type="LabelSettings" uid="uid://de8in2ljjvxpc" path="res://Resources/NormalLabel32.tres" id="1_kb5vf"]
[ext_resource type="Script" uid="uid://eed23p2q1dew" path="res://Scenes/game_ui/game_ui.gd" id="1_rrrjh"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rrrjh")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 18

[node name="VB" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="HB" type="HBoxContainer" parent="MC/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VB/HB"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Level"
label_settings = ExtResource("1_kb5vf")
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="MC/VB/HB"]
layout_mode = 2
text = "99"
label_settings = ExtResource("1_kb5vf")
vertical_alignment = 1

[node name="HB2" type="HBoxContainer" parent="MC/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VB/HB2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Moves"
label_settings = ExtResource("1_kb5vf")
vertical_alignment = 1

[node name="MovesLabel" type="Label" parent="MC/VB/HB2"]
layout_mode = 2
text = "99"
label_settings = ExtResource("1_kb5vf")
vertical_alignment = 1

[node name="HB3" type="HBoxContainer" parent="MC/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VB/HB3"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Best"
label_settings = ExtResource("1_kb5vf")
vertical_alignment = 1

[node name="BestLabel" type="Label" parent="MC/VB/HB3"]
layout_mode = 2
text = "-"
label_settings = ExtResource("1_kb5vf")
vertical_alignment = 1
